tests/src/frontend/syntax/invalid/class_constructor_final.sk
class Foo final {f: Int}
